Render silence to end of video if necessary during rendering.
Improvements to openGL playback plugin, including much smoother playback.
Re-enable Advanced options for the openGL playback plugin.
Allow cancel in VJ / Pre-decode all frames
Refactor code for timebase calculations during playback.
Overhaul external audio and audio recording to improve accuracy and use fewer CPU cycles.




Version 2.10.2 (9 Jan 2019)
---------------------------
Fix serious bug in lives_popen() - may prevent saving of new sets.
Add in part of the fix for multi_encoder3 which was overlooked in 2.10.1
Fix regression in get_extension().
Fix regression in get_frame_count().
Add new icons.
Update copyright years.
Correctly reset video playback plugin after cancelling quick transcode.
Improved youtube downloading.



Version 2.10.1 (22 Dec 2018)
----------------------------
Fix regressions in rendering of internal audio.
Fix frame rate when rendering after recording from generator plugins.
Fixes for showing time remaining in progress dialog (partial regression from 2.10.0)
Fix invisible window pre external window capture (regression).
Fix regression in some preview displays in the clip editor.
Fix preview for Compositor effect in multitrack.
Fixes for Record External Audio.
Fix regression in sending audio to audio triggered video generators (projectM, libvisual).
Sort plugins alphabetically within packages.
Ensure playback does not stop too soon in autolives mode.
Fix audio fade in / out, using smaller chunk sizes.
Allow effect output parameters to feed to internal macros, similar to MIDI / joystick controller.
Improve effect previews in multitrack mode.
Make the display mask colour/opacity configurable in Trim Frames / Add Border tool.
When an original clip is not found, allow the user to retry as well as browse - to allow for unmounted disks, etc.
Add menu option: VJ / Pre-decode all frames.
Improve pulse audio sync when recording / playing from external audio.