@@ -12,6 +12,7 @@ Re-enable Advanced options for the openGL playback plugin.
 Allow cancel in VJ / Pre-decode all frames
 Refactor code for timebase calculations during playback.
 Overhaul external audio and audio recording to improve accuracy and use fewer CPU cycles.
+Show correct effects state when reshowing effect mapper window.
 
 
 
